deployment/dex/publish_with_apisix/demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: apisix
spec:
  ingressClassName: nginx
  rules:
  - host: demo.disasterproject.com
    http:
      paths:
      - backend:
          service:
            name: apisix-dp-gateway
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - demo.disasterproject.com
    secretName: demo-tls-secret
